Fix alignment of part in post header

--- a/templates/post.css
+++ b/templates/post.css
@@ -71,6 +71,7 @@ header > p
   color: #c36;
   padding-top: 0.5em;
   padding-bottom: 0.9em;
+  margin-bottom: 0;
 }
 
 p
